# QueryArrow

./: .gitignore  .project-settings.yml  CPackConfig.cmake  LICENSE.txt  Makefile  QueryArrow.cabal  QueryArrow.hs  README.md  cabal.config  find_dependencies.sh  stack.yaml
QueryArrow-c/: QueryArrow-c.cabal  build.sh
QueryArrow-c/src/Client/: Plugin.hs  Template.hs
QueryArrow-c/src/QueryArrow/C/: GenQuery.hs  Plugin.hs  PluginGen.hs  Template.hs
QueryArrow-c/src/QueryArrow/C/GenQuery/: Data.hs  Parser.hs
QueryArrow-c/test/: rewriting-plugin.rules  tdb-plugin.json  test.cpp
QueryArrow-cache/: QueryArrow-cache.cabal
QueryArrow-cli/: QueryArrow-cli.cabal  package.yaml
QueryArrow-cli/src/: Main.hs
QueryArrow-cli/src/QueryArrow/: Client.hs
QueryArrow-common/: QueryArrow-common.cabal  package.yaml
QueryArrow-common/src/: BuiltIn.hs  Cache.hs  Config.hs  ICAT.hs  Parser.hs  QueryPlan.hs  Rewriting.hs  Sum.hs  Translation.hs  Utils.hs
QueryArrow-common/src/DB/: DB.hs  GenericDatabase.hs  NoPreparedStatement.hs  ResultStream.hs
QueryArrow-common/src/Data/Heterogeneous/: List.hs
QueryArrow-common/src/FO/: Data.hs  Domain.hs
QueryArrow-common/src/QueryArrow/: BuiltIn.hs  Cache.hs  Config.hs  ICAT.hs  ListUtils.hs  Logging.hs  Mapping.hs  Parser.hs  Plugin.hs  Plugins.hs  QueryPlan.hs  Rewriting.hs  Serialization.hs  Serialize.hs  Sum.hs  Translation.hs  Utils.hs
QueryArrow-common/src/QueryArrow/DB/: AbstractDatabaseList.hs  DB.hs  GenericDatabase.hs  NoConnection.hs  NoPreparedStatement.hs  NoTranslation.hs  ParametrizedStatement.hs  ResultStream.hs  Utils.hs
QueryArrow-common/src/QueryArrow/Data/Monoid/: Action.hs
QueryArrow-common/src/QueryArrow/FO/: Data.hs  Domain.hs  Serialize.hs  TypeChecker.hs  Types.hs  Utils.hs
QueryArrow-common/src/QueryArrow/Semantics/: Compute.hs  Domain.hs  ResultHeader.hs  ResultRow.hs  ResultSet.hs  ResultStream.hs  ResultValue.hs  Sendable.hs  TypeChecker.hs  Value.hs
QueryArrow-common/src/QueryArrow/Semantics/ResultHeader/: VectorResultHeader.hs
QueryArrow-common/src/QueryArrow/Semantics/ResultRow/: VectorResultRow.hs
QueryArrow-common/src/QueryArrow/Syntax/: Data.hs  Domain.hs  Serialize.hs  Term.hs  Type.hs  Types.hs  Utils.hs
QueryArrow-common/test/: Test.hs
QueryArrow-cypher/: QueryArrow-cypher.cabal
QueryArrow-cypher/src/Cypher/: BuiltIn.hs  Cypher.hs  ICAT.hs  Neo4j.hs  Neo4jConnection.hs  SQLToCypher.hs
QueryArrow-cypher/src/QueryArrow/Cypher/: BuiltIn.hs  Cypher.hs  ICAT.hs  Neo4j.hs  Neo4jConnection.hs  SQLToCypher.hs
QueryArrow-db-cypher/: QueryArrow-db-cypher.cabal  package.yaml
QueryArrow-db-cypher/src/QueryArrow/Cypher/: BuiltIn.hs  Cypher.hs  ICAT.hs  Mapping.hs  Neo4j.hs  Neo4jConnection.hs  SQLToCypher.hs
QueryArrow-db-cypher/test/: Test.hs
QueryArrow-db-filesystem/: QueryArrow-db-filesystem.cabal
QueryArrow-db-filesystem/src/QueryArrow/FileSystem/: Builtin.hs  Commands.hs  Connection.hs  FileSystem.hs  ICAT.hs  Interpreter.hs  LocalCommands.hs  Query.hs  Serialization.hs
QueryArrow-db-include/: QueryArrow-db-include.cabal  package.yaml
QueryArrow-db-include/src/QueryArrow/: Include.hs
QueryArrow-db-include/src/QueryArrow/DB/: Include.hs
QueryArrow-db-inmemory/: QueryArrow-db-inmemory.cabal  package.yaml
QueryArrow-db-inmemory/src/QueryArrow/: InMemory.hs
QueryArrow-db-inmemory/src/QueryArrow/Binding/: Binding.hs
QueryArrow-db-inmemory/src/QueryArrow/InMemory/: BuiltIn.hs  Map.hs
QueryArrow-db-sql-cockroachdb/: QueryArrow-db-sql-cockroachdb.cabal
QueryArrow-db-sql-common/: QueryArrow-db-sql-common.cabal  README.md  package.yaml
QueryArrow-db-sql-common/src/QueryArrow/SQL/: BuiltIn.hs  ICAT.hs  Mapping.hs  SQL.hs
QueryArrow-db-sql-common/test/: Test.hs
QueryArrow-db-sql-hdbc-cockroachdb/: QueryArrow-db-sql-hdbc-cockroachdb.cabal  package.yaml
QueryArrow-db-sql-hdbc-common/: QueryArrow-db-sql-hdbc-common.cabal  package.yaml
QueryArrow-db-sql-hdbc-common/src/QueryArrow/SQL/: HDBC.hs  ICAT.hs
QueryArrow-db-sql-hdbc-postgresql/: QueryArrow-db-sql-hdbc-postgresql.cabal  package.yaml
QueryArrow-db-sql-hdbc-postgresql/src/: PostgreSQLTest.hs
QueryArrow-db-sql-hdbc-sqlite3/: QueryArrow-db-sql-hdbc-sqlite3.cabal  package.yaml
QueryArrow-db-sql-libpq-postgresql/: QueryArrow-db-sql-libpq-postgresql.cabal  package.yaml
QueryArrow-db-sql-libpq-postgresql/src/QueryArrow/SQL/: LibPQ.hs
QueryArrow-db-sql-postgresql/: QueryArrow-db-sql-postgresql.cabal
QueryArrow-db-sql-sqlite3/: QueryArrow-db-sql-sqlite3.cabal
QueryArrow-elastic/: QueryArrow-elastic.cabal
QueryArrow-elastic/src/ElasticSearch/: ESQL.hs  ElasticSearch.hs  ElasticSearchConnection.hs  ICAT.hs  Query.hs  QueryResult.hs
QueryArrow-elastic/src/QueryArrow/ElasticSearch/: ESQL.hs  ElasticSearch.hs  ElasticSearchConnection.hs  ICAT.hs  Query.hs
QueryArrow-elastic/src/QueryArrow/HTTP/: ElasticSearchUtils.hs
QueryArrow-ffi-c/: QueryArrow-ffi-c.cabal
QueryArrow-ffi-c-genquery/: QueryArrow-ffi-c-genquery.cabal
QueryArrow-ffi-c-genquery/src/: Main.hs
QueryArrow-ffi-c-local/: QueryArrow-ffi-c-local.cabal
QueryArrow-ffi-c-tcp/: QueryArrow-ffi-c-tcp.cabal  package.yaml
QueryArrow-ffi-c-unixdomainsocket/: QueryArrow-ffi-c-unixdomainsocket.cabal  package.yaml
QueryArrow-ffi-c/test/: test.cpp
QueryArrow-ffi-genquery/: QueryArrow-ffi-genquery.cabal  package.yaml
QueryArrow-ffi-service/: QueryArrow-ffi-service.cabal  package.yaml
QueryArrow-ffi-service-handle-common/: QueryArrow-ffi-service-handle-common.cabal  package.yaml
QueryArrow-ffi-service-local/: QueryArrow-ffi-service-local.cabal  package.yaml
QueryArrow-ffi-service-tcp/: QueryArrow-ffi-service-tcp.cabal
QueryArrow-ffi-service-tcp/src/: JSONSend.hs
QueryArrow-ffi-service-unixdomainsocket/: QueryArrow-ffi-service-unixdomainsocket.cabal
QueryArrow-ffi-service-unixdomainsocket/src/: JSONSend.hs
QueryArrow-ffi-service/src/QueryArrow/Data/: Abstract.hs  PredicatesGen.hs  Template.hs
QueryArrow-ffi-service/src/QueryArrow/FFI/: Auxiliary.hs  Service.hs
QueryArrow-ffi-service/test/: rewriting-plugin.rules  tdb-plugin.json
(+422 files in other folders)
