name:           QueryArrow
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

executable QueryArrow
  hs-source-dirs:  src gen
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   QuickCheck,
                   HDBC-sqlite3,
                   HDBC-postgresql,
                   HDBC,
                   aeson,
                   bytestring,
                   plugins,
                   hspec,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   MissingH,
                   logict,
                   monadplus,
                   array,
                   temporary,
                   process,
                   logic-TPTP,
                   lens,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   resourcet,
                   template-haskell
  ghc-options:     -Wall -fPIC
  other-modules:
library
  hs-source-dirs:  src
  exposed-modules: Mpostgres
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   semigroupoids,
                   HDBC-postgresql,
                   HDBC,
                   conduit-combinators,
                   conduit,
                   resourcet
  ghc-options:     -Wall -fPIC -shared -dynamic
