name:           QueryArrow
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

executable QueryArrow
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   HDBC-sqlite3,
                   HDBC-postgresql,
                   HDBC,
                   aeson,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   monad-control,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   network,
                   json-rpc,
                   conduit-extra,
                   monad-logger,
                   fast-logger,
                   constraints,
                   lrucache,
                   template-haskell
  ghc-options:     -Wall -fPIC -threaded
  other-modules:
executable QueryArrowWeb
  hs-source-dirs:  src
  main-is:         App.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   HDBC-sqlite3,
                   HDBC-postgresql,
                   HDBC,
                   aeson,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   monad-control,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   network,
                   json-rpc,
                   conduit-extra,
                   monad-logger,
                   fast-logger,
                   constraints,
                   yesod,
                   template-haskell
  ghc-options:     -Wall -fPIC -threaded
  other-modules:
library
  hs-source-dirs:  src
  exposed-modules: SQL.HDBC.PostgreSQL
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   semigroupoids,
                   HDBC-postgresql,
                   HDBC,
                   conduit-combinators,
                   conduit,
                   utf8-string,
                   resourcet
  ghc-options:     -Wall -fPIC -shared -dynamic
Test-Suite Test
    type:       exitcode-stdio-1.0
    hs-source-dirs:  src test
    main-is:    Test.hs
    build-depends:
                     base >= 4,
                     containers,
                     mtl,
                     transformers,
                     semigroups,
                     parsec,
                     semigroupoids,
                     QuickCheck,
                     HDBC-sqlite3,
                     HDBC-postgresql,
                     HDBC,
                     aeson,
                     bytestring,
                     hspec,
                     haskell-neo4j-client,
                     unordered-containers,
                     convertible,
                     text >= 1.2.1.1,
                     scientific,
                     array,
                     temporary,
                     process,
                     lens,
                     distributive,
                     pretty-tree,
                     conduit-combinators,
                     conduit,
                     http-conduit,
                     resourcet,
                     async,
                     time,
                     cereal,
                     exceptions,
                     utf8-string,
                     template-haskell
    ghc-options:
    other-modules:
