name:           QueryArrow-c
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules: QueryArrow.C.Plugin QueryArrow.C.Template QueryArrow.C.PluginGen QueryArrow.C.GenQuery QueryArrow.C.GenQuery.Parser QueryArrow.C.GenQuery.Data
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   HDBC-sqlite3,
                   HDBC-postgresql,
                   HDBC,
                   aeson,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   http-conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   monad-control,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   network,
                   json-rpc,
                   conduit-extra,
                   monad-logger,
                   fast-logger,
                   constraints,
                   lrucache,
                   either,
                   QueryArrow-common,
                   QueryArrow-sql,
                   QueryArrow,
                   template-haskell
  ghc-options:     -Wall -fPIC -shared -dynamic -g
  other-modules:
