name:           QueryArrow-cli
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

executable QueryArrow
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   parsec,
                   text,
                   resourcet,
                   hslogger,
                   optparse-applicative,
                   network,
                   either,
                   QueryArrow-rpc-common,
                   QueryArrow-common,
                   QueryArrow-rpc-common,
                   QueryArrow
  ghc-options:     -Wall
  other-modules:

library
  hs-source-dirs:  src
  exposed-modules:         QueryArrow.Client
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   parsec,
                   text,
                   resourcet,
                   hslogger,
                   optparse-applicative,
                   network,
                   either,
                   QueryArrow-rpc-common,
                   QueryArrow-common,
                   QueryArrow-rpc-common,
                   QueryArrow
  ghc-options:     -Wall
  other-modules:
