name:           QueryArrow-common
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.FO.Data
                   QueryArrow.FO.Domain
                   QueryArrow.DB.DB
                   QueryArrow.DB.GenericDatabase
                   QueryArrow.DB.NoConnection
                   QueryArrow.DB.NoPreparedStatement
                   QueryArrow.DB.ParametrizedStatement
                   QueryArrow.DB.ResultStream
                   QueryArrow.ICAT
                   QueryArrow.BuiltIn
                   QueryArrow.QueryPlan
                   QueryArrow.Sum
                   QueryArrow.Translation
                   QueryArrow.Cache
                   QueryArrow.Rewriting
                   QueryArrow.Logging
                   QueryArrow.Parser
                   QueryArrow.Config
                   QueryArrow.ListUtils
                   QueryArrow.Utils
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   aeson,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   http-conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   conduit-extra,
                   cpphs,
                   monad-logger,
                   fast-logger,
                   constraints,
                   lrucache,
                   heterogeneous-list,
                   log-adapter
  ghc-options:     -Wall -fPIC
  other-modules:
