name:           QueryArrow-common
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.FO.Data
                   QueryArrow.FO.Types
                   QueryArrow.FO.Domain
                   QueryArrow.FO.Utils
                   QueryArrow.DB.DB
                   QueryArrow.DB.NoTranslation
                   QueryArrow.DB.GenericDatabase
                   QueryArrow.DB.NoConnection
                   QueryArrow.DB.ParametrizedStatement
                   QueryArrow.DB.ResultStream
                   QueryArrow.DB.AbstractDatabaseList
                   QueryArrow.ICAT
                   QueryArrow.BuiltIn
                   QueryArrow.QueryPlan
                   QueryArrow.Logging
                   QueryArrow.Parser
                   QueryArrow.Config
                   QueryArrow.ListUtils
                   QueryArrow.Utils
                   QueryArrow.Plugin
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   aeson,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   conduit-combinators,
                   conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   conduit-extra,
                   cpphs,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   lrucache,
                   yaml,
                   filepath,
                   heterogeneous-list,
                   log-adapter
  ghc-options:     -Wall -fPIC
  other-modules:
Test-Suite Test
    type:       exitcode-stdio-1.0
    hs-source-dirs:  src test
    main-is:    Test.hs
    build-depends:
                     base >= 4,
                     containers,
                     mtl,
                     transformers,
                     semigroups,
                     parsec,
                     semigroupoids,
                     QuickCheck,
                     aeson,
                     bytestring,
                     hspec,
                     unordered-containers,
                     convertible,
                     text >= 1.2.1.1,
                     scientific,
                     array,
                     temporary,
                     process,
                     conduit-combinators,
                     conduit,
                     http-conduit,
                     resourcet,
                     async,
                     time,
                     cereal,
                     exceptions,
                     utf8-string,
                     directory,
                     lattices,
                     template-haskell
    ghc-options:
    other-modules:
