name:           QueryArrow-common
version:        0.3
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.Syntax.Data
                   QueryArrow.Syntax.Types
                   QueryArrow.Syntax.Domain
                   QueryArrow.Syntax.Utils
                   QueryArrow.Semantics.Sendable
                   QueryArrow.Semantics.ResultValue
                   QueryArrow.Semantics.ResultValue.BinaryResultValue
                   QueryArrow.Semantics.ResultValue.AbstractResultValue
                   QueryArrow.Semantics.ResultSet
                   QueryArrow.Semantics.ResultSet.AbstractResultSet
                   QueryArrow.Semantics.ResultSet.ResultSetResultStreamResultSet
                   QueryArrow.Semantics.ResultSet.HandleResultSet
                   QueryArrow.Semantics.ResultSet.ResultStreamResultSet
                   QueryArrow.Semantics.ResultSet.VectorResultSetTransformer
                   QueryArrow.Semantics.ResultHeader
                   QueryArrow.Semantics.ResultHeader.VectorResultHeader
                   QueryArrow.Semantics.ResultRow
                   QueryArrow.Semantics.ResultRow.VectorResultRow
                   QueryArrow.Semantics.ResultStream
                   QueryArrow.DB.DB
                   QueryArrow.DB.Utils
                   QueryArrow.DB.NoTranslation
                   QueryArrow.DB.GenericDatabase
                   QueryArrow.DB.NoConnection
                   QueryArrow.DB.ParametrizedStatement
                   QueryArrow.DB.AbstractDatabaseList
                   QueryArrow.ICAT
                   QueryArrow.BuiltIn
                   QueryArrow.QueryPlan
                   QueryArrow.Logging
                   QueryArrow.Parser
                   QueryArrow.Config
                   QueryArrow.ListUtils
                   QueryArrow.Utils
                   QueryArrow.Plugin
                   QueryArrow.Data.Monoid.Action
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   parsec,
                   semigroupoids,
                   aeson,
                   bytestring,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   conduit-combinators,
                   conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   conduit-extra,
                   cpphs,
                   monad-logger,
                   fast-logger,
                   constraints,
                   either,
                   lrucache,
                   yaml,
                   filepath,
                   binary,
                   vector,
                   vector-binary-instances,
                   base64-bytestring,
                   heterogeneous-list,
                   log-adapter,
                   data-some
  ghc-options:     -Wall -fPIC
  other-modules:
Test-Suite Test
    type:       exitcode-stdio-1.0
    hs-source-dirs:  src test
    main-is:    Test.hs
    build-depends:
                     base >= 4,
                     containers,
                     mtl,
                     transformers,
                     semigroups,
                     parsec,
                     semigroupoids,
                     QuickCheck,
                     aeson,
                     bytestring,
                     hspec,
                     unordered-containers,
                     convertible,
                     text >= 1.2.1.1,
                     scientific,
                     array,
                     temporary,
                     process,
                     conduit-combinators,
                     conduit,
                     http-conduit,
                     resourcet,
                     async,
                     time,
                     cereal,
                     exceptions,
                     utf8-string,
                     directory,
                     lattices,
                     template-haskell
    ghc-options:
    other-modules:
