name:           QueryArrow-cypher
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   Cypher.Neo4j
                   Cypher.Neo4jConnection
                   Cypher.Cypher
                   Cypher.ICAT
                   Cypher.SQLToCypher
  build-depends:
                   base >= 4,
                   containers,
                   mtl,
                   transformers,
                   semigroups,
                   semigroupoids,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   array,
                   temporary,
                   process,
                   distributive,
                   pretty-tree,
                   conduit-combinators,
                   conduit,
                   aeson,
                   http-conduit,
                   resourcet,
                   async,
                   time,
                   hslogger,
                   exceptions,
                   utf8-string,
                   regex-tdfa,
                   monad-control,
                   lifted-async,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   network,
                   conduit-extra,
                   monad-logger,
                   fast-logger,
                   constraints,
                   QueryArrow-common,
                   QueryArrow-sql,
                   template-haskell
  ghc-options:     -Wall -fPIC
  other-modules:
