name:           QueryArrow-cypher
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.Cypher.Neo4j
                   QueryArrow.Cypher.Neo4jConnection
                   QueryArrow.Cypher.BuiltIn
                   QueryArrow.Cypher.Cypher
                   QueryArrow.Cypher.ICAT
                   QueryArrow.Cypher.SQLToCypher
  build-depends:
                   base >= 4,
                   containers,
                   transformers,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   aeson,
                   hslogger,
                   namespace >= 0.1.2.2,
                   heterogeneous-list,
                   lattices,
                   semibounded-lattices,
                   QueryArrow-common,
                   QueryArrow-sql-common
  ghc-options:     -Wall -fPIC
  other-modules:
