name:           QueryArrow-db-cypher
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.Cypher.Neo4j
                   QueryArrow.Cypher.Neo4jConnection
                   QueryArrow.Cypher.BuiltIn
                   QueryArrow.Cypher.Cypher
                   QueryArrow.Cypher.ICAT
                   QueryArrow.Cypher.SQLToCypher
  build-depends:
                   base >= 4,
                   containers,
                   transformers,
                   bytestring,
                   haskell-neo4j-client,
                   unordered-containers,
                   convertible,
                   text >= 1.2.1.1,
                   scientific,
                   aeson,
                   vector,
                   hslogger,
                   namespace >= 0.1.2.2,
                   heterogeneous-list,
                   lattices,
                   semibounded-lattices,
                   data-some,
                   QueryArrow-common,
                   QueryArrow-db-sql-common
  ghc-options:     -Wall -fPIC
  other-modules:
Test-Suite Test
    type:       exitcode-stdio-1.0
    hs-source-dirs:  src test
    main-is:    Test.hs
    build-depends:
                     base >= 4,
                     containers,
                     mtl,
                     transformers,
                     semigroups,
                     parsec,
                     semigroupoids,
                     QuickCheck,
                     aeson,
                     bytestring,
                     hspec,
                     haskell-neo4j-client,
                     unordered-containers,
                     convertible,
                     text >= 1.2.1.1,
                     scientific,
                     array,
                     process,
                     conduit-combinators,
                     conduit,
                     resourcet,
                     async,
                     time,
                     exceptions,
                     utf8-string,
                     directory,
                     lattices,
                     template-haskell
    ghc-options:
    other-modules:
