name:           QueryArrow-db-inmemory
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.InMemory.BuiltIn QueryArrow.InMemory.Map QueryArrow.Binding.Binding
  build-depends:
                   base >= 4,
                   aeson,
                   containers,
                   mtl,
                   transformers,
                   convertible,
                   text >= 1.2.1.1,
                   hslogger,
                   regex-tdfa,
                   regex-compat-tdfa,
                   vector,
                   conduit,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   heterogeneous-list,
                   QueryArrow-common,
                   data-some
  ghc-options:     -Wall -fPIC
  other-modules:
