name:           QueryArrow-db-sql-cockroachdb
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.SQL.HDBC.CockroachDB
  build-depends:
                   base >= 4,
                   HDBC-postgresql,
                   QueryArrow-common,
                   QueryArrow-db-sql-postgresql
  ghc-options:     -Wall -fPIC
  other-modules:
