name:           QueryArrow-db-sql-common
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
author:         Hao Xu

library
  hs-source-dirs:  src
  exposed-modules:
                   QueryArrow.SQL.ICAT
                   QueryArrow.SQL.SQL
                   QueryArrow.SQL.BuiltIn
                   QueryArrow.SQL.HDBC
  build-depends:
                   base >= 4,
                   aeson,
                   containers,
                   mtl,
                   transformers,
                   HDBC,
                   convertible,
                   text >= 1.2.1.1,
                   hslogger,
                   namespace >= 0.1.2.2,
                   lattices,
                   semibounded-lattices,
                   QueryArrow-common
  ghc-options:     -Wall -fPIC
  other-modules:
Test-Suite Test
    type:       exitcode-stdio-1.0
    hs-source-dirs:  src test
    main-is:    Test.hs
    build-depends:
                     base >= 4,
                     containers,
                     mtl,
                     transformers,
                     semigroups,
                     parsec,
                     semigroupoids,
                     QuickCheck,
                     HDBC,
                     aeson,
                     bytestring,
                     hspec,
                     unordered-containers,
                     convertible,
                     text >= 1.2.1.1,
                     scientific,
                     array,
                     process,
                     conduit-combinators,
                     conduit,
                     http-conduit,
                     resourcet,
                     async,
                     time,
                     exceptions,
                     utf8-string,
                     directory,
                     lattices,
                     template-haskell
    ghc-options:
    other-modules:
